--- a/css/main.css
+++ b/css/main.css
@@ -328,7 +328,7 @@ table {
       transform: scale(1.03);
     }
 
-/* Elyass Jan I have added this class*/
+/* Om oss start */
     .aboutus {
       grid-column: 1/4;
       grid-row: 4;
@@ -360,7 +360,7 @@ table {
       color:white;  
      }
 }
-
+ /* Om oss slut */
 
  /* smalt fönster meny */
 .topnav {
@@ -420,7 +420,7 @@ table {
 }
 
 
-/* smalt fönster för cars on sale  */
+/* smalt fönster för cars on sale START */
 @media (max-width: 1000px) {
   .box-car {
    background: white;
@@ -556,7 +556,9 @@ table {
   }
  }
  
- /* brett fönster för cars on sale*/
+ /* smalt fönster Cars on sale SLUT */
+
+ /* brett fönster för cars on sale START*/
  @media (min-width: 1000px) {
   .box-car {
    background: white;
@@ -687,7 +689,12 @@ table {
   }
 }
 
-/*Brett fönster för kontakt*/
+ /* Brett fönster för Cars on sale SLUT */
+
+
+
+
+/*Brett fönster för kontakt START*/
 @media (min-width: 1000px)
 {
     .site1 {
@@ -740,7 +747,10 @@ table {
     }
 }
 
-/* smalt fönster */
+/*Brett fönster för kontakt SLUT*/
+
+
+/* smalt fönster för kontakt START */
 @media (max-width: 1000px) {
     .site1 {
       display: grid;
@@ -798,5 +808,7 @@ table {
       padding-top: 15%;
     }
 }
+
+/*smalt fönster för kontakt Slut*/
 
 
