--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -49,8 +49,57 @@ table {
 
 
 
+/* smalt fönster för Our car brands start*/
+@media (min-width: 420px) {
+
+  .brands-logo {
+    width: 100%;
+    position: relative;
+    left: 0;
+    top: 5em;
+    overflow: hidden;
+    margin: auto;
+   }
+
+   .brands-logo .brands-wrapper {
+     width: 100%;
+     float: left;
+     position: relative;
+     overflow: hidden;
+     margin: 5px;
+     text-align: center;
+    }
+
+    .brands-logo .brands-wrapper img {
+      width: 100%;
+      display: block;
+     }
+
+     .brands-logo .brands-wrapper h5 {
+       color: #ccc;
+       font-weight: 600;
+       background: #EEE;
+       color: #333;
+       width: 100%;
+       padding: 1em;
+       margin: 1em;
+       left: -2em;
+       position: absolute;
+       bottom: -1em;
+       z-index: 10;
+       text-align: center;
+      }
+
+}
+
+/* smalt fönster för OUR Car BRANDS SLUT */
+
+
+
+
+
 /* smalt fönster för Home page */
-@media (max-width: 1000px) 
+@media (max-width: 1000px)
 {
     body {
       margin: 0%;
@@ -85,11 +134,12 @@ table {
       width: 100%;
       z-index: 999;
       background-image: linear-gradient(to bottom right, rgb(0,0,0) , rgb(15, 15, 15));
+      margin-top: 0px;
     }
     .invisible-header {
       grid-row: 1;
       width: 100%;
-      height: 80px ;
+      height: 80px;
     }
     .main-area {
       margin: 0% 1.5% 0% 1.5%;
@@ -154,15 +204,14 @@ table {
       padding: 0px;
     }
 
-
-
     .article-image {
-      border-radius: 10px 10px 0px 0px; 
+      border-radius: 10px 10px 0px 0px;
     }
-    .article-text{
+    .article-text {
       text-align: start;
       padding: 0% 5% 0% 5%;
     }
+
     .article-button {
       background-color:#B30000;
       color: white;
@@ -175,6 +224,9 @@ table {
       color: black;
     }
 
+
+
+/* OM OSS START */
     .aboutus {
       grid-column: 1/3;
       grid-row: 5;
@@ -197,6 +249,38 @@ table {
       color:white;
      }
 
+/*OM OSS SLUT */
+
+
+
+
+     /* mellan fönster för Our car brands */
+     .brands-logo {
+       width: 80%;
+       position: relative;
+       left: 0;
+       top: 5em;
+       overflow: hidden;
+       margin: auto;
+      }
+
+      .brands-logo .brands-wrapper {
+        width: 49.5%;
+        height: 250px;
+        display: inline-block;
+        margin: auto;
+        position: relative;
+        overflow: hidden;
+       }
+
+       .brands-logo .brands-wrapper img {
+         width: 70%;
+         position: absolute;
+         top: 50%;
+         left: 50%;
+         transform: translate(-50%, -50%);
+        }
+
     .footer {
       grid-column: 1/3;
       grid-row: 5;
@@ -213,7 +297,7 @@ table {
 
 
 /* brett fönster för Home page*/
-@media (min-width: 1000px) 
+@media (min-width: 1000px)
 {
     body {
       margin: 0% 10% 0% 10%;
@@ -251,7 +335,7 @@ table {
       grid-template-columns: 1fr 6fr 1fr;
       grid-column: 1/4;
       background-image: linear-gradient(to bottom right, rgb(0,0,0) , rgb(15, 15, 15));
-      box-shadow: 1px 1px 1px 1px  rgba(0, 0, 0, 0.2), 1px 1px 1px 1px rgba(0, 0, 0, 0.19);  
+      box-shadow: 1px 1px 1px 1px  rgba(0, 0, 0, 0.2), 1px 1px 1px 1px rgba(0, 0, 0, 0.19);
       position: fixed;
       width: 80%;
       margin-top: 0px;
@@ -308,7 +392,7 @@ table {
       padding: 0px;
     }
     .article-image {
-      border-radius: 5px 5px 5px 5px; 
+      border-radius: 5px 5px 5px 5px;
     }
     .article-text {
       text-align: center;
@@ -320,7 +404,7 @@ table {
       border-radius: 5px;
       padding: 5px;
       text-decoration: none;
-      transition: transform .2s; 
+      transition: transform .2s;
     }
     .article-button:hover {
       background-color: rgb(207, 83, 83);
@@ -336,7 +420,7 @@ table {
       padding: 0px;
       line-height: 16px;
       font-size: 120%;
-      color:white;   
+      color:white;
      }
 
     .about {
@@ -346,8 +430,38 @@ table {
       padding: 0px;
       line-height: 16px;
       font-size: 80%;
-      color:white;   
+      color:white;
      }
+
+
+
+
+/* Brett fönster för Our car brands START  */
+     .brands-logo {
+       width: 80%;
+       position: relative;
+       left: 0;
+       top: 5em;
+       overflow: hidden;
+       margin: auto;
+      }
+
+      .brands-logo .brands-wrapper {
+        width: 49.5%;
+        height: 250px;
+        display: inline-block;
+        margin: auto;
+        position: relative;
+        overflow: hidden;
+       }
+
+       .brands-logo .brands-wrapper img {
+         width: 50%;
+         position: absolute;
+         top: 50%;
+         left: 50%;
+         transform: translate(-50%, -50%);
+        }
 
     .footer {
       grid-column: 1/4;
@@ -357,10 +471,13 @@ table {
       margin-bottom: 50px;
       height: 10px;
       font-size: 80%;
-      color:white;  
+      color:white;
+      margin: 15em;
      }
 }
- /* Om oss slut */
+
+/* BRETT FÖNSTER OUR CAR BRANDS */
+ 
 
  /* smalt fönster meny */
 .topnav {
@@ -514,7 +631,7 @@ table {
    padding: 0px;
   }
   .car-image {
-   border-radius: 5px 5px 0px 0px; 
+   border-radius: 5px 5px 0px 0px;
   }
   .car-text1 {
    text-align: left;
@@ -555,7 +672,7 @@ table {
    color: black;
   }
  }
- 
+
  /* smalt fönster Cars on sale SLUT */
 
  /* brett fönster för cars on sale START*/
@@ -565,7 +682,7 @@ table {
    color: white;
    border-radius: 5px;
    padding: 4%;
-   transition: transform .2s; 
+   transition: transform .2s;
   }
   .box-car:hover {
    transform: scale(1.03);
@@ -647,7 +764,7 @@ table {
    padding-top:50px;
   }
   .car-image {
-   border-radius: 5px 5px 0px 0px; 
+   border-radius: 5px 5px 0px 0px;
   }
   .car-text1 {
    text-align: left;
@@ -766,7 +883,7 @@ table {
       color:white;
       background-color:#35424a;
       margin: 0% 1.5% 0% 1.5%;
-      padding-top: 18%; 
+      padding-top: 18%;
     }
     .kontakt-bild{
         border-radius: 5px;
@@ -788,7 +905,7 @@ table {
       font-size: 80%;
       padding: 0px;
       margin: 2% 3% 1.5% 1.5%;
-    }    
+    }
     .h1-contact {
         color:orange;
         font-size: 18px;
@@ -810,5 +927,3 @@ table {
 }
 
 /*smalt fönster för kontakt Slut*/
-
-
