--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ table {
 
 
 /* smalt fönster för Our car brands start*/
-@media (max-width: 1000px) 
+@media (min-width: 420px) 
 {
   .brands-logo {
     width: 100%;
@@ -432,8 +432,6 @@ table {
       font-size: 80%;
       color:white;
      }
-
-
 
 
 /* Brett fönster för Our car brands START  */
