--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+/* CSS Reset START */
+
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -47,9 +49,9 @@ table {
 	border-spacing: 0;
 }
 
+/* CSS Reset END */
 
-
-/* smalt fönster för Our car brands start*/
+/*fönster för Our car brands start*/
 @media (min-width: 420px) 
 {
 
@@ -80,7 +82,7 @@ table {
       display: block;
      }
 
-     .brands-logo .brands-wrapper h5 {
+     .brands-logo .brands-wrapper p {
        color: #ccc;
        font-weight: 600;
        background: #EEE;
@@ -97,7 +99,7 @@ table {
 
 }
 
-/* smalt fönster för OUR Car BRANDS SLUT */
+/* fönster för OUR Car BRANDS SLUT */
 
 
 
@@ -259,11 +261,26 @@ table {
 
 
 
-     /* mellan fönster för Our car brands */
+     /* smalt fönster för Our car brands START */
      .car-logotext{
       color:white;
       
     }
+
+    .brands-logo .brands-wrapper p {
+      color: #ccc;
+      font-weight: 600;
+      background: #EEE;
+      color: #333;
+      width: 100%;
+      padding: 1em;
+      margin: 1em;
+      left: -2em;
+      position: absolute;
+      bottom: -1em;
+      z-index: 10;
+      text-align: center;
+     }
      .brands-logo {
        width: 80%;
        position: relative;
@@ -302,7 +319,7 @@ table {
      }
 }
 
-
+/* smalt fönster för Our car brands  */
 
 
 /* brett fönster för Home page*/
@@ -654,6 +671,7 @@ margin: 15em;
    font-size: 100%;
   }
   .car-text2 {
+    color: white;
    text-align: right;
    padding: 0% 3% 3% 3%;
    grid-column: 2;
@@ -684,6 +702,13 @@ margin: 15em;
    font-size: 80%;
    color: black;
   }
+  .footer-car {
+    grid-column: 1/4;
+    grid-row: 7;
+    text-align: center;
+    font-size: 80%;
+    color: white;
+   }
  }
 
  /* smalt fönster Cars on sale SLUT */
